--- a/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
+++ b/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
@@ -1,149 +1,151 @@
-<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
-  <br>
-  <div class="row">
-    <div class="col d-flex justify-content-between align-items-center">
-      <p class="titulo">{{esConsulta ? 'Consultar inventario' : 'Registrar producto en inventario'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
-        <mat-icon class="editar">edit</mat-icon>
-      </button>
-    </div>
-  </div>
-
-  <mat-divider></mat-divider>
-
-  <br>
-  <form [formGroup]="form">
-    <div class="row pt-4">
-      <div class="col-md">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Producto</mat-label>
-          <input matInput
-                 placeholder="Producto"
-                 [formControl]="txProducto"
-                 [matAutocomplete]="autoCompleteProducto">
-        </mat-form-field>
-        <app-error-messages [control]="txProducto"></app-error-messages>
-        <mat-autocomplete #autoCompleteProducto="matAutocomplete" (optionSelected)="enSeleccionDeProducto($event)">
-          <mat-option *ngFor="let producto of this.productosFiltrados" [value]="producto.nombre" [id]="producto.id.toString()">
-            {{ producto.nombre }}
-          </mat-option>
-        </mat-autocomplete>
-      </div>
-      <div class="col-md">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label *ngIf="esRegistro">Cantidad a añadir al inventario</mat-label>
-          <mat-label *ngIf="!esRegistro">Cantidad en Inventario</mat-label>
-          <input type="text" matInput [formControl]="txCantidadEnInventario"/>
-        </mat-form-field>
-        <app-error-messages [control]="txCantidadEnInventario"></app-error-messages>
-      </div>
-      <div class="col-md" *ngIf="!esRegistro">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Valor de Inventario</mat-label>
-          <input type="text" matInput [formControl]="txValorEnInventario"/>
-        </mat-form-field>
-        <app-error-messages [control]="txValorEnInventario"></app-error-messages>
+<div class="custom-dialo-calido" [class.dark-mode]="darkMode">
+  <div class="container py-3 px-4 col-xl-12">
+    <br>
+    <div class="row">
+      <div class="col d-flex justify-content-between align-items-center">
+        <p class="titulo">{{esConsulta ? 'Consultar inventario' : 'Registrar producto en inventario'}}</p>
+        <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
+          <mat-icon class="editar">edit</mat-icon>
+        </button>
       </div>
     </div>
-  </form>
 
-  <mat-divider *ngIf="!esRegistro"></mat-divider>
-  <br>
+    <mat-divider></mat-divider>
 
-  <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="movimientosProducto.length == 0 && !esRegistro">
-    <mat-spinner></mat-spinner>
-  </div>
-
-  <div class="row pt-4" *ngIf="movimientosProducto.length > 0 && !esRegistro">
-    <div class="col-md-3">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Fecha Desde</mat-label>
-        <input matInput [matDatepicker]="pickerFecha" [formControl]="txBuscarFecha" />
-        <mat-datepicker-toggle matSuffix [for]="pickerFecha"></mat-datepicker-toggle>
-        <mat-datepicker #pickerFecha></mat-datepicker>
-        <mat-icon matPrefix>search</mat-icon>
-      </mat-form-field>
-      <app-error-messages [control]="txBuscarFecha"></app-error-messages>
-    </div>
-    <div class="col-md-3">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Fecha Hasta</mat-label>
-        <input matInput [matDatepicker]="pickerFechaHasta" [formControl]="txBuscarFechaHasta" />
-        <mat-datepicker-toggle matSuffix [for]="pickerFechaHasta"></mat-datepicker-toggle>
-        <mat-datepicker #pickerFechaHasta></mat-datepicker>
-        <mat-icon matPrefix>search</mat-icon>
-      </mat-form-field>
-      <app-error-messages [control]="txBuscarFechaHasta"></app-error-messages>
-    </div>
-    <div class="col-md-3">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Tipo de movimiento</mat-label>
-        <input type="text" matInput [formControl]="txBuscarTipo"/>
-        <mat-icon matPrefix>search</mat-icon>
-      </mat-form-field>
-      <app-error-messages [control]="txBuscarTipo"></app-error-messages>
-    </div>
-  </div>
-
-  <br>
-
-  <mat-card [hidden]="!(movimientosProducto.length > 0 && !esRegistro)">
-    <mat-card-content>
-      <div class="row">
-
-        <div class="col-md-12">
-          <mat-table [dataSource]="dataSourceMovimientosProducto" matSort [class.disabled-table]="formDesactivado || tablaMovimientosDesactivada">
-            <ng-container matColumnDef="fecha">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA MOVIMIENTO</mat-header-cell>
-              <mat-cell *matCellDef="let movimiento">{{ movimiento.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
-              <mat-cell *matCellDef="let movimiento">{{ movimiento.producto.nombre }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="cantidad">
-              <mat-header-cell *matHeaderCellDef>CAMBIO EN CANTIDAD</mat-header-cell>
-              <mat-cell *matCellDef="let movimiento">{{ movimiento.cantidad }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="tipoMovimiento">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>TIPO DE MOVIMIENTO</mat-header-cell>
-              <mat-cell *matCellDef="let movimiento">{{ movimiento.tipoMovimiento }}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="referencia">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>REFERENCIA</mat-header-cell>
-              <mat-cell *matCellDef="let movimiento">{{ movimiento.referencia }}</mat-cell>
-            </ng-container>
-            <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
-          </mat-table>
-          <mat-paginator
-                         [length]="this.movimientosProducto.length"
-                         [disabled]="formDesactivado"
-                         [pageSize]="10"
-                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <br>
+    <form [formGroup]="form">
+      <div class="row pt-4">
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Producto</mat-label>
+            <input matInput
+                   placeholder="Producto"
+                   [formControl]="txProducto"
+                   [matAutocomplete]="autoCompleteProducto">
+          </mat-form-field>
+          <app-error-messages [control]="txProducto"></app-error-messages>
+          <mat-autocomplete #autoCompleteProducto="matAutocomplete" (optionSelected)="enSeleccionDeProducto($event)">
+            <mat-option *ngFor="let producto of this.productosFiltrados" [value]="producto.nombre" [id]="producto.id.toString()">
+              {{ producto.nombre }}
+            </mat-option>
+          </mat-autocomplete>
+        </div>
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label *ngIf="esRegistro">Cantidad a añadir al inventario</mat-label>
+            <mat-label *ngIf="!esRegistro">Cantidad en Inventario</mat-label>
+            <input type="text" matInput [formControl]="txCantidadEnInventario"/>
+          </mat-form-field>
+          <app-error-messages [control]="txCantidadEnInventario"></app-error-messages>
+        </div>
+        <div class="col-md" *ngIf="!esRegistro">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Valor de Inventario</mat-label>
+            <input type="text" matInput [formControl]="txValorEnInventario"/>
+          </mat-form-field>
+          <app-error-messages [control]="txValorEnInventario"></app-error-messages>
         </div>
       </div>
-    </mat-card-content>
-  </mat-card>
+    </form>
 
-  <h5 *ngIf="!isLoading && !(this.movimientosProducto.length > 0) && !esRegistro" class="alert alert-secondary text-center">
-    No se encuentran movimientos para mostrar, por favor realice una nueva búsqueda.
-  </h5>
+    <mat-divider *ngIf="!esRegistro"></mat-divider>
+    <br>
 
-  <mat-divider class="my-3"></mat-divider>
-  <br *nfIf="!esRegistro">
-
-  <!-- Btn de cancelar, registrar y modificar -->
-  <div class="row text-right">
-    <div class="col d-flex justify-content-end">
-      <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
-        {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
-      </button>
-      <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarDetalleProducto()" id="btnBuscar">Registrar</button>
-      <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarDetalleProducto()" id="btnBuscar2">Modificar</button>
+    <!-- loading -->
+    <div class="spinner-wrapper" *ngIf="movimientosProducto.length == 0 && !esRegistro">
+      <mat-spinner></mat-spinner>
     </div>
-  </div>
 
-  <br>
+    <div class="row pt-4" *ngIf="movimientosProducto.length > 0 && !esRegistro">
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Fecha Desde</mat-label>
+          <input matInput [matDatepicker]="pickerFecha" [formControl]="txBuscarFecha" />
+          <mat-datepicker-toggle matSuffix [for]="pickerFecha"></mat-datepicker-toggle>
+          <mat-datepicker #pickerFecha></mat-datepicker>
+          <mat-icon matPrefix>search</mat-icon>
+        </mat-form-field>
+        <app-error-messages [control]="txBuscarFecha"></app-error-messages>
+      </div>
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Fecha Hasta</mat-label>
+          <input matInput [matDatepicker]="pickerFechaHasta" [formControl]="txBuscarFechaHasta" />
+          <mat-datepicker-toggle matSuffix [for]="pickerFechaHasta"></mat-datepicker-toggle>
+          <mat-datepicker #pickerFechaHasta></mat-datepicker>
+          <mat-icon matPrefix>search</mat-icon>
+        </mat-form-field>
+        <app-error-messages [control]="txBuscarFechaHasta"></app-error-messages>
+      </div>
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Tipo de movimiento</mat-label>
+          <input type="text" matInput [formControl]="txBuscarTipo"/>
+          <mat-icon matPrefix>search</mat-icon>
+        </mat-form-field>
+        <app-error-messages [control]="txBuscarTipo"></app-error-messages>
+      </div>
+    </div>
+
+    <br>
+
+    <mat-card [hidden]="!(movimientosProducto.length > 0 && !esRegistro)">
+      <mat-card-content>
+        <div class="row">
+
+          <div class="col-md-12">
+            <mat-table [dataSource]="dataSourceMovimientosProducto" matSort [class.disabled-table]="formDesactivado || tablaMovimientosDesactivada">
+              <ng-container matColumnDef="fecha">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA MOVIMIENTO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.fecha | date: 'dd/MM/yyyy HH:mm' }}</mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="producto">
+                <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.producto.nombre }}</mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="cantidad">
+                <mat-header-cell *matHeaderCellDef>CAMBIO EN CANTIDAD</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.cantidad }}</mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="tipoMovimiento">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>TIPO DE MOVIMIENTO</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.tipoMovimiento }}</mat-cell>
+              </ng-container>
+              <ng-container matColumnDef="referencia">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>REFERENCIA</mat-header-cell>
+                <mat-cell *matCellDef="let movimiento">{{ movimiento.referencia }}</mat-cell>
+              </ng-container>
+              <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
+            </mat-table>
+            <mat-paginator
+              [length]="this.movimientosProducto.length"
+              [disabled]="formDesactivado"
+              [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+    <h5 *ngIf="!isLoading && !(this.movimientosProducto.length > 0) && !esRegistro" class="alert alert-secondary text-center">
+      No se encuentran movimientos para mostrar, por favor realice una nueva búsqueda.
+    </h5>
+
+    <mat-divider class="my-3"></mat-divider>
+    <br *nfIf="!esRegistro">
+
+    <!-- Btn de cancelar, registrar y modificar -->
+    <div class="row text-right">
+      <div class="col d-flex justify-content-end">
+        <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+          {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
+        </button>
+        <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarDetalleProducto()" id="btnBuscar">Registrar</button>
+        <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarDetalleProducto()" id="btnBuscar2">Modificar</button>
+      </div>
+    </div>
+
+    <br>
+  </div>
 </div>
