--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -1,4 +1,5 @@
-<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
+<div class="custom-dialo-calido" [class.dark-mode]="darkMode">
+<div class="container py-3 px-4 col-xl-12">
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
@@ -236,4 +237,5 @@
   </div>
 
   <br>
+</div>
 </div>
