--- a/src/app/modules/empleados/registrar-empleados/registrar-empleados.component.html
+++ b/src/app/modules/empleados/registrar-empleados/registrar-empleados.component.html
@@ -1,164 +1,165 @@
-<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
-  <br>
-  <div class="row">
-    <div class="col d-flex justify-content-between align-items-center">
-      <p class="titulo">{{esConsulta ? 'Consultar Empleado' : 'Registrar Empleado'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()" [appRole]="['Encargado']">
-        <mat-icon class="editar">edit</mat-icon>
-      </button>
-    </div>
-  </div>
-
-  <form [formGroup]="form">
-
+<div class="custom-dialo-calido" [class.dark-mode]="darkMode">
+  <div class="container py-3 px-4 col-xl-12">
     <br>
-    <h3>Datos generales:</h3>
-    <mat-divider class="my-3"></mat-divider>
-
-    <div class="row pt-4">
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Nombre</mat-label>
-          <input type="text" matInput [formControl]="txNombre"/>
-        </mat-form-field>
-        <app-error-messages [control]="txNombre"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Apellido</mat-label>
-          <input type="text" matInput [formControl]="txApellido"/>
-        </mat-form-field>
-        <app-error-messages [control]="txApellido"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Email</mat-label>
-          <input type="email" matInput [formControl]="txMail"/>
-        </mat-form-field>
-      </div>
-      <app-error-messages [control]="txMail"></app-error-messages>
-
-    </div>
-
-    <div class="row pt-4">
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CUIL</mat-label>
-          <input type="text" mask="00-00000000-0" matInput [formControl]="txCuil"/>
-        </mat-form-field>
-        <app-error-messages [control]="txCuil"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>DNI</mat-label>
-          <input type="text" matInput [formControl]="txDNI"/>
-        </mat-form-field>
-        <app-error-messages [control]="txDNI"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Fecha de nacimiento</mat-label>
-          <input matInput [matDatepicker]="pickerFechaNacimiento" [formControl]="txFechaNacimiento" />
-          <mat-datepicker-toggle matSuffix [for]="pickerFechaNacimiento"></mat-datepicker-toggle>
-          <mat-datepicker #pickerFechaNacimiento></mat-datepicker>
-        </mat-form-field>
-        <app-error-messages [control]="txFechaNacimiento"></app-error-messages>
+    <div class="row">
+      <div class="col d-flex justify-content-between align-items-center">
+        <p class="titulo">{{esConsulta ? 'Consultar Empleado' : 'Registrar Empleado'}}</p>
+        <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()" [appRole]="['Encargado']">
+          <mat-icon class="editar">edit</mat-icon>
+        </button>
       </div>
     </div>
 
-    <div class="row pt-4">
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Género</mat-label>
-          <mat-select [formControl]="ddGenero">
-            <mat-option *ngFor="let genero of generos" [value]="genero.id">
-              {{ genero.nombre }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <app-error-messages [control]="ddGenero"></app-error-messages>
-      </div>
-    </div>
+    <form [formGroup]="form">
 
-    <br>
-    <h3>Domicilio:</h3>
-    <mat-divider class="my-3"></mat-divider>
+      <br>
+      <h3>Datos generales:</h3>
+      <mat-divider class="my-3"></mat-divider>
 
-    <div class="row pt-4">
-      <div class="col-md">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Provincia</mat-label>
-          <input matInput
-                 placeholder="Ingrese"
-                 [formControl]="txProvincia"
-                 [matAutocomplete]="autoCompleteProvincia">
-        </mat-form-field>
-        <app-error-messages [control]="txProvincia"></app-error-messages>
-        <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
-          <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
-            {{provincia.nombre}}
-          </mat-option>
-        </mat-autocomplete>
-      </div>
-      <div class="col-md">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Localidad</mat-label>
-          <input matInput
-                 placeholder="Ingrese"
-                 [formControl]="txLocalidad"
-                 (input)="filtrarLocalidades()"
-                 [matAutocomplete]="autoCompleteLocalidad">
-        </mat-form-field>
-        <app-error-messages [control]="txLocalidad"></app-error-messages>
-        <mat-autocomplete #autoCompleteLocalidad="matAutocomplete" (optionSelected)="seleccionarLocalidad()">
-          <mat-option *ngFor="let localidad of this.localidadesFiltradas" [value]="localidad.nombre">
-            {{localidad.nombre}}
-          </mat-option>
-        </mat-autocomplete>
-      </div>
-
-      <div class="col-md-3">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Calle</mat-label>
-          <input type="text" matInput [formControl]="txCalle"/>
-        </mat-form-field>
-        <app-error-messages [control]="txCalle"></app-error-messages>
-      </div>
-      <div class="col-md-3">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Número</mat-label>
-          <input type="text" matInput [formControl]="txNumero"/>
-        </mat-form-field>
-        <app-error-messages [control]="txNumero"></app-error-messages>
-      </div>
-      <div class="row pt-2">
-        <div class="col-md-3">
+      <div class="row pt-4">
+        <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Código Postal</mat-label>
-            <input type="text" matInput [formControl]="txCodigoPostal"/>
+            <mat-label>Nombre</mat-label>
+            <input type="text" matInput [formControl]="txNombre"/>
           </mat-form-field>
-          <app-error-messages [control]="txCodigoPostal"></app-error-messages>
+          <app-error-messages [control]="txNombre"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Apellido</mat-label>
+            <input type="text" matInput [formControl]="txApellido"/>
+          </mat-form-field>
+          <app-error-messages [control]="txApellido"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Email</mat-label>
+            <input type="email" matInput [formControl]="txMail"/>
+          </mat-form-field>
+        </div>
+        <app-error-messages [control]="txMail"></app-error-messages>
+
+      </div>
+
+      <div class="row pt-4">
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>CUIL</mat-label>
+            <input type="text" mask="00-00000000-0" matInput [formControl]="txCuil"/>
+          </mat-form-field>
+          <app-error-messages [control]="txCuil"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>DNI</mat-label>
+            <input type="text" matInput [formControl]="txDNI"/>
+          </mat-form-field>
+          <app-error-messages [control]="txDNI"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Fecha de nacimiento</mat-label>
+            <input matInput [matDatepicker]="pickerFechaNacimiento" [formControl]="txFechaNacimiento" />
+            <mat-datepicker-toggle matSuffix [for]="pickerFechaNacimiento"></mat-datepicker-toggle>
+            <mat-datepicker #pickerFechaNacimiento></mat-datepicker>
+          </mat-form-field>
+          <app-error-messages [control]="txFechaNacimiento"></app-error-messages>
         </div>
       </div>
-    </div>
 
-    <br>
-    <h3>Empleado en el sistema:</h3>
-    <mat-divider class="my-3"></mat-divider>
-
-    <div class="row pt-4">
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Nombre de usuario</mat-label>
-          <input type="text" matInput [formControl]="txNombreUsuario"/>
-        </mat-form-field>
-        <app-error-messages [control]="txNombreUsuario"></app-error-messages>
+      <div class="row pt-4">
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Género</mat-label>
+            <mat-select [formControl]="ddGenero">
+              <mat-option *ngFor="let genero of generos" [value]="genero.id">
+                {{ genero.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <app-error-messages [control]="ddGenero"></app-error-messages>
+        </div>
       </div>
+
+      <br>
+      <h3>Domicilio:</h3>
+      <mat-divider class="my-3"></mat-divider>
+
+      <div class="row pt-4">
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Provincia</mat-label>
+            <input matInput
+                   placeholder="Ingrese"
+                   [formControl]="txProvincia"
+                   [matAutocomplete]="autoCompleteProvincia">
+          </mat-form-field>
+          <app-error-messages [control]="txProvincia"></app-error-messages>
+          <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
+            <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
+              {{provincia.nombre}}
+            </mat-option>
+          </mat-autocomplete>
+        </div>
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Localidad</mat-label>
+            <input matInput
+                   placeholder="Ingrese"
+                   [formControl]="txLocalidad"
+                   (input)="filtrarLocalidades()"
+                   [matAutocomplete]="autoCompleteLocalidad">
+          </mat-form-field>
+          <app-error-messages [control]="txLocalidad"></app-error-messages>
+          <mat-autocomplete #autoCompleteLocalidad="matAutocomplete" (optionSelected)="seleccionarLocalidad()">
+            <mat-option *ngFor="let localidad of this.localidadesFiltradas" [value]="localidad.nombre">
+              {{localidad.nombre}}
+            </mat-option>
+          </mat-autocomplete>
+        </div>
+
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Calle</mat-label>
+            <input type="text" matInput [formControl]="txCalle"/>
+          </mat-form-field>
+          <app-error-messages [control]="txCalle"></app-error-messages>
+        </div>
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Número</mat-label>
+            <input type="text" matInput [formControl]="txNumero"/>
+          </mat-form-field>
+          <app-error-messages [control]="txNumero"></app-error-messages>
+        </div>
+        <div class="row pt-2">
+          <div class="col-md-3">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Código Postal</mat-label>
+              <input type="text" matInput [formControl]="txCodigoPostal"/>
+            </mat-form-field>
+            <app-error-messages [control]="txCodigoPostal"></app-error-messages>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <h3>Empleado en el sistema:</h3>
+      <mat-divider class="my-3"></mat-divider>
+
+      <div class="row pt-4">
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Nombre de usuario</mat-label>
+            <input type="text" matInput [formControl]="txNombreUsuario"/>
+          </mat-form-field>
+          <app-error-messages [control]="txNombreUsuario"></app-error-messages>
+        </div>
 
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
@@ -186,26 +187,25 @@
           </mat-form-field>
           <app-error-messages [control]="txRoles"></app-error-messages>
         </div>
+      </div>
+
+    </form>
+
+    <br>
+    <mat-divider class="my-3"></mat-divider>
+
+    <!-- Btn de cancelar, registrar y modificar -->
+    <div class="row text-right">
+      <div class="col d-flex justify-content-end">
+        <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+          {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
+        </button>
+        <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarNuevoEmpleado()" id="btnBuscar">Registrar</button>
+        <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarEmpleado()" id="btnBuscar2">Modificar</button>
+      </div>
     </div>
 
-  </form>
-
-  <br>
-  <mat-divider class="my-3"></mat-divider>
-
-  <!-- Btn de cancelar, registrar y modificar -->
-  <div class="row text-right">
-    <div class="col d-flex justify-content-end">
-      <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
-        {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
-      </button>
-      <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarNuevoEmpleado()" id="btnBuscar">Registrar</button>
-      <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarEmpleado()" id="btnBuscar2">Modificar</button>
-    </div>
+    <br>
   </div>
-
-  <br>
 </div>
-
-
 
