--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -1,13 +1,14 @@
-<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
-  <br>
-  <div class="row">
-    <div class="col d-flex justify-content-between align-items-center">
-      <p class="titulo">{{esConsulta ? 'Consultar proveedor' : 'Registrar proveedor'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
-        <mat-icon class="editar">edit</mat-icon>
-      </button>
+<div class="custom-dialo-calido" [class.dark-mode]="darkMode">
+  <div class="container py-3 px-4 col-xl-12">
+    <br>
+    <div class="row">
+      <div class="col d-flex justify-content-between align-items-center">
+        <p class="titulo">{{esConsulta ? 'Consultar proveedor' : 'Registrar proveedor'}}</p>
+        <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
+          <mat-icon class="editar">edit</mat-icon>
+        </button>
+      </div>
     </div>
-  </div>
 
     <br>
 
@@ -57,21 +58,21 @@
       <br>
 
       <div class="row pt-4">
-          <div class="col-md-3">
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Provincia</mat-label>
-              <input matInput
-                     placeholder="Ingrese"
-                     [formControl]="txProvincia"
-                     [matAutocomplete]="autoCompleteProvincia">
-            </mat-form-field>
-            <app-error-messages [control]="txProvincia"></app-error-messages>
-            <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
-              <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
-                {{provincia.nombre}}
-              </mat-option>
-            </mat-autocomplete>
-          </div>
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Provincia</mat-label>
+            <input matInput
+                   placeholder="Ingrese"
+                   [formControl]="txProvincia"
+                   [matAutocomplete]="autoCompleteProvincia">
+          </mat-form-field>
+          <app-error-messages [control]="txProvincia"></app-error-messages>
+          <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
+            <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
+              {{provincia.nombre}}
+            </mat-option>
+          </mat-autocomplete>
+        </div>
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Localidad</mat-label>
@@ -109,16 +110,17 @@
     <mat-divider></mat-divider>
     <br>
 
-  <!-- Btn de cancelar, registrar y modificar -->
-  <div class="row text-right">
-    <div class="col d-flex justify-content-end">
-      <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
-        {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
-      </button>
-      <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarProveedor()" id="btnBuscar">Registrar</button>
-      <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarProveedor()" id="btnBuscar2">Modificar</button>
+    <!-- Btn de cancelar, registrar y modificar -->
+    <div class="row text-right">
+      <div class="col d-flex justify-content-end">
+        <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+          {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
+        </button>
+        <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarProveedor()" id="btnBuscar">Registrar</button>
+        <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarProveedor()" id="btnBuscar2">Modificar</button>
+      </div>
     </div>
-  </div>
 
-  <br>
+    <br>
+  </div>
 </div>
