--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.html
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.html
@@ -1,191 +1,193 @@
-<div class="container py-3 col-xl-11">
-  <br>
-  <div class="row">
-    <div class="col-8 mt-2">
-      <p class="titulo">Consultar venta</p>
-      <p *ngIf="venta.anulada">Venta anulada</p>
-    </div>
-    <div class="col-4">
-      <div class="row justify-content-start justify-content-sm-end" style="margin-right: 15px">
-        <button
-          *ngIf="!venta.anulada"
-          mat-icon-button
-          color="primary"
-          matTooltip="Anular venta"
-          (click)="desHacerVenta()"
-          [disabled]="venta.canceladaConSaldo === 1 && venta.comprobanteAfip.comprobante_pdf_url !== null"
-          [appRole]="['Cajero', 'Encargado']">
-          <mat-icon class="eliminar">settings_backup_restore</mat-icon>
-        </button>
-        <button
-          *ngIf="venta.comprobanteAfip.comprobante_pdf_url != null"
-          mat-icon-button color="primary"
-          matTooltip="Imprimir comprobante"
-          (click)="imprimirComprobante()"
-          [appRole]="['Administrador', 'Encargado', 'Cajero']">
-          <mat-icon class="imprimir">print</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <br>
-
-  <h3 class="subtitulo">Datos generales:</h3>
-  <mat-divider class="my-3"></mat-divider>
-  <br>
-
-  <form [formGroup]="form">
-    <div class="row">
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Número de venta</mat-label>
-          <input type="text" matInput [formControl]="txNumeroVenta"/>
-        </mat-form-field>
-        <app-error-messages [control]="txNumeroVenta"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Fecha de venta</mat-label>
-          <input type="text" matInput [formControl]="txFecha"/>
-        </mat-form-field>
-        <app-error-messages [control]="txFecha"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Forma de pago</mat-label>
-          <input type="text" matInput [formControl]="txFormaDePago"/>
-        </mat-form-field>
-        <app-error-messages [control]="txFormaDePago"></app-error-messages>
-      </div>
-
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Tipo de factura</mat-label>
-          <input type="text" matInput [formControl]="txTipoFactura"/>
-        </mat-form-field>
-        <app-error-messages [control]="txTipoFactura"></app-error-messages>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Monto total</mat-label>
-          <input type="text" matInput [formControl]="txMontoTotal" mask="separator.2" prefix="$ " thousandSeparator=","/>
-        </mat-form-field>
-        <app-error-messages [control]="txMontoTotal"></app-error-messages>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4" *ngIf="venta.descuento">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Descuento por tarjeta</mat-label>
-          <input type="text" matInput [formControl]="txDescuento" mask="separator.2" prefix="% " thousandSeparator=","/>
-        </mat-form-field>
-        <app-error-messages [control]="txDescuento"></app-error-messages>
-      </div>
-
-      <div class="col-md-4" *ngIf="venta.interes">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Interés por tarjeta</mat-label>
-          <input type="text" matInput [formControl]="txInteres" mask="separator.2" prefix="% " thousandSeparator=","/>
-        </mat-form-field>
-        <app-error-messages [control]="txInteres"></app-error-messages>
-      </div>
-    </div>
-
+<div class="custom-dialo-calido" [class.dark-mode]="darkMode">
+  <div class="container py-3 col-xl-11">
     <br>
-    <h3 class="subtitulo">Cliente:</h3>
-    <mat-divider class="my-3"></mat-divider>
-    <br>
-
     <div class="row">
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Cliente</mat-label>
-          <input type="text" matInput [formControl]="txCliente"/>
-        </mat-form-field>
+      <div class="col-8 mt-2">
+        <p class="titulo">Consultar venta</p>
+        <p *ngIf="venta.anulada">Venta anulada</p>
       </div>
-      <div class="col-md-4" *ngIf="this.venta.cliente.id != -1">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Dni</mat-label>
-          <input type="text" matInput [formControl]="txDniCliente"/>
-        </mat-form-field>
-      </div>
-      <div class="col-md-4" *ngIf="this.venta.cliente.id != -1">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Mail</mat-label>
-          <input type="text" matInput [formControl]="txMailCliente"/>
-        </mat-form-field>
-      </div>
-    </div>
-
-    <br>
-    <h3 class="subtitulo">Productos vendidos:</h3>
-    <mat-divider class="my-3"></mat-divider>
-
-    <mat-card>
-      <mat-card-content>
-        <div class="row">
-          <div class="col-md-12">
-            <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
-              <ng-container matColumnDef="imgProducto">
-                <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
-                <mat-cell *matCellDef="let producto">
-                  <img [src]="producto.imgProducto" class="img-thumbnail"/>
-                </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="nombre">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
-                <mat-cell *matCellDef="let producto" data-label="Producto">{{ producto.nombre }}</mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="cantidadSeleccionada">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>CANTIDAD</mat-header-cell>
-                <mat-cell *matCellDef="let producto" data-label="Cantidad">{{ producto.cantidadSeleccionada }}</mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="subTotalVenta">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>SUBTOTAL</mat-header-cell>
-                <mat-cell *matCellDef="let producto" data-label="subTotal">$ {{ producto.subTotalVenta | number:'1.2-2':'es-AR' }}</mat-cell>
-              </ng-container>
-
-
-              <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
-              <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
-
-            </mat-table>
-
-            <mat-paginator
-                           [length]="this.venta.productos.length"
-                           [pageSize]="10"
-                           [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-          </div>
+      <div class="col-4">
+        <div class="row justify-content-start justify-content-sm-end" style="margin-right: 15px">
+          <button
+            *ngIf="!venta.anulada"
+            mat-icon-button
+            color="primary"
+            matTooltip="Anular venta"
+            (click)="desHacerVenta()"
+            [disabled]="venta.canceladaConSaldo === 1 && venta.comprobanteAfip.comprobante_pdf_url !== null"
+            [appRole]="['Cajero', 'Encargado']">
+            <mat-icon class="eliminar">settings_backup_restore</mat-icon>
+          </button>
+          <button
+            *ngIf="venta.comprobanteAfip.comprobante_pdf_url != null"
+            mat-icon-button color="primary"
+            matTooltip="Imprimir comprobante"
+            (click)="imprimirComprobante()"
+            [appRole]="['Administrador', 'Encargado', 'Cajero']">
+            <mat-icon class="imprimir">print</mat-icon>
+          </button>
         </div>
-      </mat-card-content>
-    </mat-card>
-
-    <h5 *ngIf="!(this.venta.productos.length > 0)" class="alert alert-secondary text-center">
-      No se encuentran productos de la venta para mostrar, por favor realice una nueva búsqueda.
-    </h5>
-
-    <br>
-    <mat-divider class="my-3"></mat-divider>
-
-    <div class="row text-right">
-      <div class="col d-flex justify-content-end">
-        <button mat-button color="accent" class="btn round" (click)="cerrar()" id="btnLimpiarFiltro">
-          Cerrar
-        </button>
       </div>
     </div>
+
     <br>
-  </form>
+
+    <h3 class="subtitulo">Datos generales:</h3>
+    <mat-divider class="my-3"></mat-divider>
+    <br>
+
+    <form [formGroup]="form">
+      <div class="row">
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Número de venta</mat-label>
+            <input type="text" matInput [formControl]="txNumeroVenta"/>
+          </mat-form-field>
+          <app-error-messages [control]="txNumeroVenta"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Fecha de venta</mat-label>
+            <input type="text" matInput [formControl]="txFecha"/>
+          </mat-form-field>
+          <app-error-messages [control]="txFecha"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Forma de pago</mat-label>
+            <input type="text" matInput [formControl]="txFormaDePago"/>
+          </mat-form-field>
+          <app-error-messages [control]="txFormaDePago"></app-error-messages>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Tipo de factura</mat-label>
+            <input type="text" matInput [formControl]="txTipoFactura"/>
+          </mat-form-field>
+          <app-error-messages [control]="txTipoFactura"></app-error-messages>
+        </div>
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Monto total</mat-label>
+            <input type="text" matInput [formControl]="txMontoTotal" mask="separator.2" prefix="$ " thousandSeparator=","/>
+          </mat-form-field>
+          <app-error-messages [control]="txMontoTotal"></app-error-messages>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4" *ngIf="venta.descuento">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Descuento por tarjeta</mat-label>
+            <input type="text" matInput [formControl]="txDescuento" mask="separator.2" prefix="% " thousandSeparator=","/>
+          </mat-form-field>
+          <app-error-messages [control]="txDescuento"></app-error-messages>
+        </div>
+
+        <div class="col-md-4" *ngIf="venta.interes">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Interés por tarjeta</mat-label>
+            <input type="text" matInput [formControl]="txInteres" mask="separator.2" prefix="% " thousandSeparator=","/>
+          </mat-form-field>
+          <app-error-messages [control]="txInteres"></app-error-messages>
+        </div>
+      </div>
+
+      <br>
+      <h3 class="subtitulo">Cliente:</h3>
+      <mat-divider class="my-3"></mat-divider>
+      <br>
+
+      <div class="row">
+
+        <div class="col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Cliente</mat-label>
+            <input type="text" matInput [formControl]="txCliente"/>
+          </mat-form-field>
+        </div>
+        <div class="col-md-4" *ngIf="this.venta.cliente.id != -1">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Dni</mat-label>
+            <input type="text" matInput [formControl]="txDniCliente"/>
+          </mat-form-field>
+        </div>
+        <div class="col-md-4" *ngIf="this.venta.cliente.id != -1">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Mail</mat-label>
+            <input type="text" matInput [formControl]="txMailCliente"/>
+          </mat-form-field>
+        </div>
+      </div>
+
+      <br>
+      <h3 class="subtitulo">Productos vendidos:</h3>
+      <mat-divider class="my-3"></mat-divider>
+
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col-md-12">
+              <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
+                <ng-container matColumnDef="imgProducto">
+                  <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
+                  <mat-cell *matCellDef="let producto">
+                    <img [src]="producto.imgProducto" class="img-thumbnail"/>
+                  </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="nombre">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
+                  <mat-cell *matCellDef="let producto" data-label="Producto">{{ producto.nombre }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="cantidadSeleccionada">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>CANTIDAD</mat-header-cell>
+                  <mat-cell *matCellDef="let producto" data-label="Cantidad">{{ producto.cantidadSeleccionada }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="subTotalVenta">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>SUBTOTAL</mat-header-cell>
+                  <mat-cell *matCellDef="let producto" data-label="subTotal">$ {{ producto.subTotalVenta | number:'1.2-2':'es-AR' }}</mat-cell>
+                </ng-container>
+
+
+                <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
+                <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
+
+              </mat-table>
+
+              <mat-paginator
+                [length]="this.venta.productos.length"
+                [pageSize]="10"
+                [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+
+      <h5 *ngIf="!(this.venta.productos.length > 0)" class="alert alert-secondary text-center">
+        No se encuentran productos de la venta para mostrar, por favor realice una nueva búsqueda.
+      </h5>
+
+      <br>
+      <mat-divider class="my-3"></mat-divider>
+
+      <div class="row text-right">
+        <div class="col d-flex justify-content-end">
+          <button mat-button color="accent" class="btn round" (click)="cerrar()" id="btnLimpiarFiltro">
+            Cerrar
+          </button>
+        </div>
+      </div>
+      <br>
+    </form>
+  </div>
 </div>
